<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ScenarioOneActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/scenario_one_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:tabMode="scrollable"
        app:tabMinWidth="100dp"
        app:tabMaxWidth="100dp"
        android:layout_weight="1"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/scenario_one_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/scenario_one_text_1"
            android:text="@string/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/scenario_one_text_2"
            android:text="@string/text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/scenario_one_text_3"
            android:text="@string/text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scenario_one_textView"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/default_tab_desc"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/scenario_one_button_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/scenario_one_button_1"
            android:text="@string/button_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/scenario_one_button_2"
            android:text="@string/button_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/scenario_one_button_3"
            android:text="@string/button_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>

